# embedded-flight

./: Cargo.toml  README.md
control/: Cargo.toml
control/src/: attitude.rs  body_rate.rs  lateral_pos.rs  lib.rs  pid.rs  slew_limiter.rs
control/src/attitude/: mod.rs  multi_copter.rs
control/src/pid/: mod.rs  slew_limiter.rs
copter/: Cargo.toml
copter/src/: lib.rs  motor.rs
copter/src/control/: altitude.rs  attitude.rs  body_rate.rs  lateral_pos.rs  mod.rs  yaw.rs
copter/src/control/motor/: quad.rs
copter/src/esc/: mod.rs
copter/src/motor/: mod.rs  quad.rs
core/: Cargo.toml
core/src/: lib.rs  scheduler.rs
examples/: basic.rs  motor_matrix.rs  scheduler.rs
examples/quad/: Cargo.toml
examples/quad/.cargo/: config
examples/quad/src/: main.rs
examples/scheduler/: Cargo.toml
examples/scheduler/src/: main.rs
motors/: Cargo.toml
motors/src/: filter.rs  lib.rs
motors/src/esc/: mod.rs
motors/src/esc/rcesc/: builder.rs  mod.rs
motors/src/matrix/: mod.rs  motor.rs
scheduler/: Cargo.toml
scheduler/src/: error.rs  lib.rs  task.rs
src/: attitude.rs  copter.rs  filter.rs  lib.rs  yaw.rs
src/control/: altitude.rs  body_rate.rs
src/copter/: attitude_controller.rs  builder.rs  mod.rs
src/copter/control/: altitude.rs  attitude.rs  body_rate.rs  lateral_pos.rs  mod.rs  yaw.rs
src/copter/control/motor/: mod.rs  quad.rs
src/esc/: mod.rs
src/hal/: mod.rs
src/hal/esc/: mod.rs
src/hal/esc/rcesc/: builder.rs  mod.rs
src/motor/: context.rs  mod.rs  motor_matrix.rs  tail_sitter.rs
src/motor_matrix/: mod.rs  multi_copter.rs  tail_sitter.rs
src/plane/: control.rs  mod.rs
src/scheduler/: error.rs  mod.rs  task.rs
