[package]
name = "embedded-flight"
version = "0.2.0"
description = "Embedded flight library"
edition = "2021"
license = "MIT"
repository = "https://github.com/matthunz/embedded-flight"

[workspace]
members = [
    "core",
    "control",
    "motors",
    "scheduler"
]

[dependencies]
embedded-flight-core = { path = "./core" }
embedded-flight-control = { path = "./control" }
embedded-flight-motors = { path = "./motors" }
embedded-flight-scheduler = { path = "./scheduler" }
embedded-time = "0.12.1"
nalgebra = { version = "0.31.0", default-features = false }
