[package]
name = "embedded-flight"
version = "0.2.1"
description = "Embedded flight library"
edition = "2021"
license = "MIT"
repository = "https://github.com/matthunz/embedded-flight"

[workspace]
members = [
    "core",
    "control",
    "motors",
    "scheduler"
]

[dependencies]
embedded-flight-core = "0.1.1"
embedded-flight-control = { path = "./control" }
embedded-flight-motors = "0.1.2"
embedded-flight-scheduler = "0.1.1"
embedded-time = "0.12.1"
nalgebra = { version = "0.31.0", default-features = false }

[dependencies.num-traits]
version= "0.2.15"
default-features = false
