[package]
name = "embedded-flight"
version = "0.3.1"
description = "Embedded flight library"
edition = "2021"
license = "MIT"
repository = "https://github.com/matthunz/embedded-flight"

[dependencies]
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
nalgebra = "0.31.0"
pid-controller = "0.1.0"

[dependencies.num-traits]
version= "0.2.15"
default-features = false
features = ["libm"]

[dev-dependencies]
approx = "0.5.1"
std-embedded-time = "0.1.0"
