[package]
name = "embedded-flight-copter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
nalgebra = "0.31.0"
pid-controller = { git = "https://github.com/matthunz/pid-controller" }

[dependencies.num-traits]
version= "0.2.15"
default-features = false
features = ["libm"]

[dev-dependencies]
approx = "0.5.1"
