[package]
name = "embedded-flight-core"
version = "0.1.1"
description = "Embedded flight core library"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-time = "0.12.1"
nalgebra = { version = "0.31.0", default-features = false }

[dependencies.num-traits]
version= "0.2.15"
default-features = false
features = ["libm"]
